# cads-worker

./: .cruft.json  .gitignore  Dockerfile  Makefile  README.md  Worker.Dockerfile  environment-minver.yml  environment.dev  environment.stable  environment.yml  filesystems.py  pyproject.toml  setup.cfg
.github/workflows/: main.yaml  on-push.yml
cads_worker/: __init__.py  config.py  entry_points.py  filesystems.py  models.py  utils.py  worker.py
ci/: environment-ci.yml  environment-integration.yml
docs/: conf.py  index.md
tests/: test_00_version.py  test_01_models.py  test_10_cache_cleaner.py  test_20_expire_cache_entries.py  test_30_utils.py  test_40_worker.py  test_50_filesystems.py
