[metadata]
name = cads-worker
license = Apache License 2.0
description = Utility functions for CADS Dask worker
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md

[options]
packages = find:

[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = True

[options.entry_points]
console_scripts =
    cache-cleaner = cads_worker.entry_points:cache_cleaner
